Adicionando primeiros resultados

--- a/00 - Analisando a evolução das Quadras Fiscais.ipynb
+++ b/00 - Analisando a evolução das Quadras Fiscais.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carrengando dados de cada um dos anos de IPTU\n",
+    "## Carregando dados de cada um dos anos de IPTU\n",
     "\n",
     "Para cada conjunto de dados de IPTU:\n",
     "\n",
